--- a/src/views/moviesDelete.ejs
+++ b/src/views/moviesDelete.ejs
@@ -12,9 +12,9 @@
     <figure>
         <img src="/img/logo-DH.png" alt="Logo Digital House">
       </figure>
-    <h1>Estas seguro de querer borrar esta película: <%= Movie.title %>???</h1>
+    <h1>Estas seguro de querer borrar esta película: <%= movie.title %>???</h1>
     <p>
-        <form action="/movies/delete/<%= Movie.id %>" method="POST">
+        <form action="/movies/delete/<%= movie.id %>" method="POST">
             <br>
             <p> <button class="botonBorrar" type="submit">Borrar la Película</button>
             
