--- a/src/views/moviesEdit.ejs
+++ b/src/views/moviesEdit.ejs
@@ -22,9 +22,15 @@
             <label for="awards">Awards </label>
             <p><input type="number" name="awards" id="awards" value="<%= Movie.awards %>" required></p>
             <label for="release_date">Release date </label>
-            <p><input type="date" name="release_date" id="release_date" value="<%= Movie.release_date %>" required></p>
+            <p><input type="date" name="release_date" id="release_date" value="<%= moment(Movie.release_date).format('YYYY-MM-DD')%>" required></p>
             <label for="length">Length </label>
             <p><input type="number" name="length" id="" value="<%= Movie.length %>" required></p>
+            <label for="genre_id">Genres</label>
+            <select name="genre_id" id="genre_id">
+                <% genres.forEach(genre => { %>
+                 <option value="<%= genre.id %>"<%= genre.id === Movie.genre_id && 'selected' %> ><%= genre.name %></option>
+                <% }) %>
+            </select>
             <br>
             <p> <button class="botonAgregar" type="submit">Actualizar</button>
         
