--- a/src/views/actorsDetail.ejs
+++ b/src/views/actorsDetail.ejs
@@ -10,7 +10,8 @@
 <body>
     <figure>
         <img src="/img/logo-DH.png" alt="Logo Digital House">
-    </figure>    
+    </figure>  
+    <%- include('./partials/header')%> 
     <h1><%= actor.first_name %> </h1>
     <br>
     <p>NAME: <%= actor.first_name %> </p>
