--- a/src/views/moviesAdd.ejs
+++ b/src/views/moviesAdd.ejs
@@ -12,6 +12,7 @@
     <figure>
         <img src="/img/logo-DH.png" alt="Logo Digital House">
       </figure>
+      <%- include('./partials/header')%>
     <h1 class="titulo">Agregar Película</h1>
     <br>
     <section class="formulario">
