--- a/src/views/moviesEdit.ejs
+++ b/src/views/moviesEdit.ejs
@@ -12,6 +12,7 @@
     <figure>
         <img src="/img/logo-DH.png" alt="Logo Digital House">
       </figure>
+      <%- include('./partials/header')%>
     <h1 class="titulo">Película a Editar:  <%= Movie.title %></h1>
     <section class="formulario">
         <form action="/movies/update/<%= Movie.id %>?_method=PUT" method="POST">
