--- a/src/views/recommendedMovies.ejs
+++ b/src/views/recommendedMovies.ejs
@@ -10,6 +10,7 @@
     <figure>
         <img src="/img/logo-DH.png" alt="Logo Digital House">
     </figure>
+    <%- include('./partials/header')%>
     <h1>PEÍCULAS ORDENADAS POR POSICIÓN</h1>
     <ul>
         <% for( let i = 0; i < movies.length; i++ ) { %>
