--- a/src/views/genresDetail.ejs
+++ b/src/views/genresDetail.ejs
@@ -10,7 +10,8 @@
 <body>
     <figure>
         <img src="/img/logo-DH.png" alt="Logo Digital House">
-    </figure>    
+    </figure>
+    <%- include('./partials/header')%>
     <h1><%= genre.name %> </h1>
     <br>
     <p>NAME: <%= genre.name %> </p>
