--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,6 +8,7 @@
     <figure>
       <img src="/img/logo-DH.png" alt="Logo Digital House">
     </figure>
+    <%- include('./partials/header')%>
     <h1><%= title %></h1>
     <p>Bienvenidos a <%= title %></p>
   </body>
