--- a/src/views/moviesDetail.ejs
+++ b/src/views/moviesDetail.ejs
@@ -11,6 +11,7 @@
     <figure>
         <img src="/img/logo-DH.png" alt="Logo Digital House">
     </figure>
+    <%- include('./partials/header')%>
     <h1><%= movie.title %> </h1>    
     <br>
     <p>RATING: <%= movie.rating %> </p>
