--- a/src/views/moviesList.ejs
+++ b/src/views/moviesList.ejs
@@ -13,6 +13,7 @@
     <figure>
         <img src="/img/logo-DH.png" alt="Logo Digital House">
     </figure>
+    <%- include('./partials/header')%>
     <h1>LISTADO DE PELÍCULAS</h1>
     <ul>
         <% for( let i = 0; i < movies.length; i++ ) { %>
