--- a/src/views/moviesAdd.ejs
+++ b/src/views/moviesAdd.ejs
@@ -11,36 +11,52 @@
 <body>
     <figure>
         <img src="/img/logo-DH.png" alt="Logo Digital House">
-      </figure>
-      <%- include('./partials/header')%>
-    <h1 class="titulo">Agregar Película</h1>
-    <br>
-    <section class="formulario">
-        <form action="/movies/create" method="POST">
-            <label for="title">Title </label>
-            <p><input type="text" name="title" id="" ></p>
-            <label for="rating">Rating </label>
-            <p><input type="number" name="rating" id="" > </p>
-            <label for="awards">Awards </label>
-            <p><input type="number" name="awards" id="" ></p>
-            <label for="release_date">Release date </label>
-            <p><input type="date" name="release_date" id="" ></p>
-            <label for="length">Length </label>
-            <p><input type="number" name="length" id="" ></p>
-            <label for="genre_id">Genres</label>
-            <select name="genre_id" id="genre_id">
-                <option value="" hidden selected>Seleccione genero</option>
-                <% genres.forEach(genre => { %>
-                 <option value="<%= genre.id %>"><%= genre.name %></option>
-                <% }) %>
-            </select>
-            <br>
-            <p> <button class="botonAgregar" type="submit">Agregar</button>
-            
-            <a  class="botonVolver" href="/movies">Listado de Películas</a></p>
-        </form>
-    </section>
-    
+    </figure>
+    <%- include('./partials/header')%>
+        <h1 class="titulo">Agregar Película</h1>
+        <br>
+        <section class="formulario">
+            <form action="/movies/create" method="POST">
+
+                <label for="title">Title </label>
+                <p><input type="text" name="title" id="" value="<%= locals.old && old.title ? old.title : null %>"></p>
+                <small><%= locals.errors && errors.title ? errors.title.msg : null %></small>
+
+                <label for="rating">Rating </label>
+                <p><input type="number" name="rating" id="" value="<%= locals.old && old.rating ? old.rating : null %>"> </p>
+                <small><%= locals.errors && errors.rating ? errors.rating.msg : null %></small>
+
+                <label for="awards">Awards </label>
+                <p><input type="number" name="awards" id="" value="<%= locals.old && old.awards ? old.awards : null %>"></p>
+                <small><%= locals.errors && errors.awards ? errors.awards.msg : null %></small>
+
+                <label for="release_date">Release date </label>
+                <p><input type="date" name="release_date" id="" value="<%= locals.old && old.release_date ? old.release_date : null %>"></p>
+                <small><%= locals.errors && errors.release_date ? errors.release_date.msg : null %></small>
+
+                <label for="length">Length </label>
+                <p><input type="number" name="length" id="" value="<%= locals.old && old.length ? old.length : null %>"></p>
+                <small><%= locals.errors && errors.length ? errors.length.msg : null %></small>
+                <br>
+                <label for="genre_id">Genres</label>
+                <select name="genre_id" id="genre_id">
+                    <option value="" hidden selected>Seleccione genero</option>
+                    <% genres.forEach(genre=> { %>
+                        <option value="<%= genre.id %>">
+                            <%= genre.name %>
+                        </option>
+                        <% }) %>
+                </select>
+                <br>
+                <small><%= locals.errors && errors.genre_id ? errors.genre_id.msg : null %></small>
+                <br>
+                <p> <button class="botonAgregar" type="submit">Agregar</button>
+
+                    <a class="botonVolver" href="/movies">Listado de Películas</a>
+                </p>
+            </form>
+        </section>
+
 </body>
 
 </html>
